IndexedDB: Properties of IDBKeyRange should default to undefined https://bugs.webkit.org/show_bug.cgi?id=96401

Reviewed by Adam Barth.

Source/WebCore:

Per the IndexedDB spec, properties of IDBKeyRange should be |undefined| if
not set (i.e. range.upper if created with lowerBound(), and vice versa), rather
than null.

Test: storage/indexeddb/keyrange.html

* bindings/v8/custom/V8IDBKeyCustom.cpp:
(WebCore::toV8): Since IDBKeyRange is the only place where possibly-null
keys are returned to script, change the JS value from null to undefined.
And call v8Undefined(). It's faster.
* bindings/js/custom/JSIDBKeyCustom.cpp:
(WebCore::toJS): Ditto.

LayoutTests:

Update test expectations.

* storage/indexeddb/keyrange-expected.txt:
* storage/indexeddb/resources/keyrange.js:
(checkLowerBoundKeyRange):
(checkUpperBoundKeyRange):


Canonical link: https://commits.webkit.org/114568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128482 268f45cc-cd09-0410-ab3c-d52691b4dbfc